<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CityExpress</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="habitaciones">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="title_activity_promo_code">PromoCode</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">692589974203305</string>

    <string name="impuestos">Precios sin impuestos</string>

    <!--Principal-->

    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="hotel_destino_ciudad">Hotel, destino o ciudad</string>
    <string name="selecciona_promocode">Selecciona un promocode</string>
    <string name="buscar_disponibilidad">BUSCAR DISPONIBILIDAD</string>

    <!--Iniciar Sesion-->
    <string name="ingresa_datos">INGRESA TUS DATOS</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="entrar">ENTRAR</string>
    <string name="olvide_password">Olvidé mi contraseña</string>
    <string name="no_registro">¿NO ESTÁS REGISTRADO?</string>
    <string name="registrate">REGÍSTRATE</string>

    <!--Registro-->
    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="genero">Género</string>
    <string name="titulo">Título</string>
    <string name="validar_pass">La contraseña debe tener 8 caracteres como mínimo, debe incluir un numero</string>
    <string name="pais">País</string>
    <string name="teléfono">Teléfono</string>
    <string name="acepto_condiciones"><u>ACEPTO LOS TÉRMINOS Y CONDICIONES</u></string>
    <string name="iniciar_sesion_toolbar">Iniciar Sesión</string>
    <string name="registro_toolbar">Registro</string>
    <string name="recuperar_pass">Recuperar contraseña</string>

    <!--Extras-->
    <string name="entendido">Entendido</string>

    <string-array name="gender_user">
                
        <item>Masculino</item>
                
        <item>Femenino</item>
    </string-array>

    <string-array name="titulo_user">
        <item>Miss</item>
        <item>Mr</item>
        <item>Mrs</item>
        <item>Prof</item>
    </string-array>

    <string-array name="num_habitaciones">   
        <item>1</item>     
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

</resources>
