<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.zebstudios.cityexpress.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="20dp"
        android:background="#456"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ingresa_datos"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/correo_electronico"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/user"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/password"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/main_color3"
            android:textColor="@color/white"
            android:text="@string/entrar" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color1"
            android:layout_marginTop="10dp"
            android:text="@string/olvide_password"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_registro"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/main_color3"
            android:text="@string/registrate"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>
