<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:orientation="vertical"
    tools:context="com.zebstudios.cityexpress.RegistroActivity">

    <include
        android:id="@+id/toolbarTitulo"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_alpha"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:id="@+id/edtxtNombre"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:hint="@string/nombre"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/edtxtApPaterno"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:background="@color/white"
                    android:hint="@string/apellido_paterno"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:id="@+id/edtxtApMaterno"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:background="@color/white"
                    android:hint="@string/apellido_materno"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/btnGenero"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:textColor="@color/blue_button"
                    android:background="@color/white"
                    android:drawableRight="@drawable/flecha_drop"
                    android:text="@string/genero" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:id="@+id/btnTitulo"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:textColor="@color/blue_button"
                    android:layout_marginBottom="10dp"
                    android:drawableRight="@drawable/flecha_drop"
                    android:background="@color/white"
                    android:text="@string/titulo" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:id="@+id/edtxtCorreo"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/correo_electronico" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/edtxtPassReg"                    android:padding="10dp"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:hint="@string/password"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/validar_pass"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="10sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@color/white"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/btnPais"
                    android:gravity="left|center"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/blue_button"
                    android:layout_gravity="center"
                    android:drawableRight="@drawable/flecha_drop"
                    android:text="@string/pais"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:id="@+id/edtxtTelefono"
                    android:hint="@string/teléfono"
                    android:inputType="number"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:id="@+id/img_condiciones"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/unchecked"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/txtTerminos"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:text="@string/acepto_condiciones"/>
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue_button_2"
                    android:id="@+id/btnRegistrate"
                    android:text="@string/registrate"
                    android:textColor="@color/white" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</LinearLayout>
