<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.zebstudios.cityexpress.MainFragment">

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"/>
    <Button
        android:id="@+id/btnRegistarme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnIniciarSesion"
        android:layout_marginTop="5dp"
        android:text="@string/iniciar_sesion"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1.0"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:backgroundTint="#b9c6d2">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:alpha="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hotel_destino_ciudad"
                android:id="@+id/edtxtHotelDestino"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icn_buscar"
                android:id="@+id/imageView3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/linearLlegada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="16dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="05 nov 2015"
                    android:textSize="18sp"
                    android:textColor="@color/main_color3"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icn_in"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:background="@color/white"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="05 nov 2015"
                    android:textColor="@color/main_color3"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icn_out"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/selecciona_promocode"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icn_promo"/>
        </LinearLayout>
        <Button
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_disponibilidad"
            android:textColor="#FFF"
            android:background="@color/main_color3"/>
    </LinearLayout>
</RelativeLayout>
