<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zebstudios.cityexpress.ResultadosDisponibilidad">


    <include
        android:id="@+id/toolbarTitulo"
        layout="@layout/toolbar_general"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/yellow_button"
        android:paddingLeft="5dp">
        <TextView
            android:id="@+id/textViewFechaLlegada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Entrada 07 dic 2015"
            android:textColor="#000"/>
        <View
            android:layout_width="2dp"
            android:layout_height="10dp"
            android:layout_weight="0"
            android:layout_gravity="center_vertical"
            android:background="#000"/>
        <TextView
            android:id="@+id/textViewFechaSalida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salida 08 dic 2015"
            android:textColor="#000"/>
        <ImageView
            android:id="@+id/imgViewMostrarOcultarLinear"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/mostrar_buscador"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearBuscarDisponibilidad"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:visibility="gone"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@drawable/bg_home">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:alpha="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hotel_destino_ciudad"
                android:id="@+id/edtxtHotelDestinoResultados"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icn_buscar"
                android:id="@+id/imageView3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/linearSalidaResultados"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@color/white"
                android:padding="16dp"
                android:layout_weight="2"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/t"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="05 nov 2015"
                    android:textSize="18sp"
                    android:textColor="@color/blue_letters_color"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icn_in"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLlegadaResultados"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginLeft="5dp"
                android:background="@color/white"
                android:layout_weight="2"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="05 nov 2015"
                    android:textColor="@color/blue_letters_color"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icn_out"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <EditText
                android:id="@+id/editTextPromoCodeResultados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/selecciona_promocode"/>
            <ImageView
                android:id="@+id/imgPromocodeResultados"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icn_promo"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnDisponibilidadResultados"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_disponibilidad"
            android:textColor="#000"
            android:background="@color/yellow_button"/>
    </LinearLayout>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/cardListHoteles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
